second commit fixed html layout

--- a/Gitrepopractice.html
+++ b/Gitrepopractice.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<header
-<main>
+<header>
 
+</header>
+<main>
+<p>
+    first repo, second commit
+</p>
 
 
 </main>
@@ -9,4 +13,3 @@
 
 
 
-</header>
