--- a/Gitrepopractice.html
+++ b/Gitrepopractice.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<header>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Best Website Ever!!</title>
+</head>
+<body>
+	<header>
 
-</header>
-<main>
-<p>
-    first repo, second commit
-</p>
-<p>third commit</p>
+	</header>
+	<main>
+	<p>
+		first repo, second commit
+	</p>
+	<p>third commit</p>
 
 
-</main>
+	</main>
+</body>
+
 
 
 
